packages/coln-compiler/test/golden/higher-order-theory.output
-- elaborated


-- messages

error[E0307]: type sig
  V : Set -> Set
end too large for universe Theory
1 | theory InvalidArrow := sig
1 |                        ^^^
2 |   V : Set -> Set
2 | ^^^^^^^^^^^^^^^^
3 | end
3 | ^^^

error[E0307]: type sig
  V : (Int -> Int) -> Set
end too large for universe Theory
5 | theory InvalidIntArrow := sig
5 |                           ^^^
6 |   V : (Int -> Int) -> Set
6 | ^^^^^^^^^^^^^^^^^^^^^^^^^
7 | end
7 | ^^^

error[E0311]: higher-order theories are not supported
9 | theory InvalidParameter (F : Set -> Set) := sig
9 |                          ^^^^^^^^^^^^^^

error[E0311]: higher-order theories are not supported
12 | theory InvalidIntParameter (F : (Int -> Int) -> Set) := sig
12 |                             ^^^^^^^^^^^^^^^^^^^^^^^
