packages/coln-compiler/test/golden/higher-order-theory.coln
theory InvalidArrow := sig
  V : Set -> Set
end

theory InvalidIntArrow := sig
  V : (Int -> Int) -> Set
end

theory InvalidParameter (F : Set -> Set) := sig
end

theory InvalidIntParameter (F : (Int -> Int) -> Set) := sig
end
